# bevy-pretty-nice-input

./: CHANGELOG.md  Cargo.toml  README.md
bevy-pretty-nice-input/: Cargo.toml
bevy-pretty-nice-input-derive/: Cargo.toml
bevy-pretty-nice-input-derive/src/: derive_action.rs  lib.rs
bevy-pretty-nice-input/src/: bundles.rs  debug_graph.rs  lib.rs
bevy-pretty-nice-menus/: Cargo.toml  README.md
bevy-pretty-nice-menus/src/: lib.rs
bevy_pretty_nice_input/: Cargo.toml
bevy_pretty_nice_input/examples/: first_person_controller.rs
bevy_pretty_nice_input/src/: actions.rs  binding1d.rs  binding2d.rs  binding_parts.rs  bindings.rs  bundles.rs  conditions.rs  debug_graph.rs  derive.rs  events.rs  lib.rs
bevy_pretty_nice_input_derive/: Cargo.toml
bevy_pretty_nice_input_derive/src/: derive_action.rs  derive_try_from_action_data.rs  input.rs  input_transition.rs  lib.rs
