[package]
name = "bevy-pretty-nice-input-derive"
version = "0.1.0"
edition = "2024"
description = "Procedural macros for bevy-pretty-nice-input"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DragonFoxCollective/bevy-pretty-nice-input"

[lib]
proc-macro = true

[features]
debug_graph = []
default = []

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.41"
syn = "2.0.106"

[dev-dependencies]
bevy_reflect = { version = "0.17.2", default-features = false }
