[package]
name = "bevy_pretty_nice_input"
version = "0.2.0"
edition = "2024"
description = "A refreshingly complex input crate for Bevy"
categories = ["game-development"]
keywords = ["bevy", "input"]
rust-version = "1.88.0"                                                      # Follows bevy 0.17
license = "MIT OR Apache-2.0"
repository = "https://github.com/DragonFoxCollective/bevy_pretty_nice_input"

[features]
debug_graph = ["bevy_pretty_nice_input_derive/debug_graph"]
default = []

[dependencies]
bevy = { version = "0.17", default-features = false, features = ["bevy_log"] }
bevy_pretty_nice_input_derive = { path = "../bevy_pretty_nice_input_derive", version = "0.2.0" }
paste = "1.0.15"
