[package]
name = "bevy_pretty_nice_input_derive"
version = "0.2.0"
edition = "2024"
description = "Procedural macros for bevy_pretty_nice_input"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DragonFoxCollective/bevy_pretty_nice_input"

[lib]
proc-macro = true

[features]
debug_graph = []
default = []

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.41"
syn = { version = "2.0.106", features = ["full"] }

[dev-dependencies]
bevy_reflect = { version = "0.17.2", default-features = false, features = [
	"auto_register_inventory",
] }
