[package]
name = "bevy_pretty_nice_input_derive"
version = "0.5.0"
edition = "2024"
description = "Procedural macros for bevy_pretty_nice_input"
repository = "https://github.com/DragonFoxCollective/bevy_pretty_nice_input"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.41"
syn = { version = "2.0.106", features = ["extra-traits", "full"] }

[features]
default = []
debug_graph = []
